--- a/.gitignore
+++ b/.gitignore
@@ -39,6 +39,8 @@ bower_components
 # Optional REPL history
 .node_repl_history
 
+.idea
+
 /public/vendor
 /public/stylesheets/style.css.map
 /public/stylesheets/style.css
