--- a/.gitignore
+++ b/.gitignore
@@ -50,6 +50,5 @@ bower_components
 *.lock
 
 /public/vendor
-/public/stylesheets/style.css.map
-/public/stylesheets/style.css
+/public/stylesheets/*.css*
 *.db
